--- a/public/src/templates/cart.html
+++ b/public/src/templates/cart.html
@@ -54,8 +54,8 @@
             </div>
             <div class="text-navigation-footer">
                 <a href='/member'>Medlemsvy</a>
-                <a href='{{ url("member/history") }}'>Köphistorik</a>
-                <a href='{{ url("") }}'>Webshop</a>
+                <a href='{{ url("/member/history") }}'>Köphistorik</a>
+                <a href='{{ url("/") }}'>Webshop</a>
             </div>
         </div>
     </body>
