--- a/public/src/templates/product.html
+++ b/public/src/templates/product.html
@@ -15,8 +15,8 @@
     <body>
         <div id="single-page-content">
             <div class="product-nav-buttons">
-                <a class="product-nav-left" href='{{ url("") }}'><span uk-icon="arrow-left"></span> Tillbaka</a>
-                <a class="product-nav-right" href='{{ url("cart") }}'>Min kundvagn<span id='cart-sum'></span> <span uk-icon="cart"></span></a>
+                <a class="product-nav-left" href='{{ url("/") }}'><span uk-icon="arrow-left"></span> Tillbaka</a>
+                <a class="product-nav-right" href='{{ url("/cart") }}'>Min kundvagn<span id='cart-sum'></span> <span uk-icon="cart"></span></a>
             </div>
             <div class="product-view">
                 <h1 id="name"></h1>
