--- a/public/src/templates/receipt.html
+++ b/public/src/templates/receipt.html
@@ -21,9 +21,9 @@
             </div>
             <div id="receipt-content"></div>
             <div class="text-navigation-footer">
-                <a href='{{ url("member") }}'>Medlemsvy</a>
-                <a href='{{ url("member/history") }}'>Köphistorik</a>
-                <a href='{{ url("") }}'>Webshop</a>
+                <a href='/member'>Medlemsvy</a>
+                <a href='{{ url("/member/history") }}'>Köphistorik</a>
+                <a href='{{ url("/") }}'>Webshop</a>
             </div>
         </div>
     </body>
