#34 Changed name of frontend_url to public_url since it is the public url.

--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -20,7 +20,7 @@
             <p>Bli gärna medlem i <a href="https://www.facebook.com/groups/makerspace.se">Stockholm Makerspace Facebookgrupp</a>. Där läggs mycket värdefull information upp och har du några frågor så är det den perfekta platsen att ställa dem.</p>
             <p>Det finns även en slack kanal och lite annat. Se <a href="https://www.makerspace.se/kontakta-oss">denna sida</a> för mer information</p>
             <h2>Ditt konto</h2>
-            <p>Vill du komma åt ditt konto på Stockholm Makerspace så kan du logga in <a href="{{ frontend_url('/member') }}">här</a>. Där kan du förutom att ändra dina kontaktuppgifter även se hur länge till din labaccess gäller samt komma åt webshoppen.</p>
+            <p>Vill du komma åt ditt konto på Stockholm Makerspace så kan du logga in <a href="{{ public_url('/member') }}">här</a>. Där kan du förutom att ändra dina kontaktuppgifter även se hur länge till din labaccess gäller samt komma åt webshoppen.</p>
         </td>
     </tr>
 </table>
