--- a/backend/src/templates/updated_key_time_email.html
+++ b/backend/src/templates/updated_key_time_email.html
@@ -8,8 +8,8 @@
         <td>
             <h2>Din labaccess har utökats!</h2>
             <p>Hej {{member.firstname}}. Din labaccess har utökats med {{extended_days}} dagar och är nu giltig till och med {{end_date}}.</p>
-            <p>Kom ihåg att du alltid kan se din nuvarande labaccess-status på <a href="{{ frontend_url('/member') }}">Stockholm Makerspace hemsida</a>.</p>
-            <p>Ny labaccess och annat material kan köpas i <a href="{{ frontend_url('/shop') }}">webshoppen</a>.</p>
+            <p>Kom ihåg att du alltid kan se din nuvarande labaccess-status på <a href="{{ public_url('/member') }}">Stockholm Makerspace hemsida</a>.</p>
+            <p>Ny labaccess och annat material kan köpas i <a href="{{ public_url('/shop') }}">webshoppen</a>.</p>
         </td>
     </tr>
 </table>
