#36 Redirect is now done to the correct place.

--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -3,7 +3,9 @@
     <body>
         <script>
             localStorage.token = "{{ token }}";
-            window.location.replace("/");
+            let url = new URL(window.location);
+            let redirect = url.searchParams.get("redirect");
+            window.location.replace(redirect || "/");
         </script>
     </body>
 </html>
