--- a/public/src/templates/cart.html
+++ b/public/src/templates/cart.html
@@ -1,3 +1,4 @@
+{% from "sidebar.html" import sidebar with context %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -13,49 +14,47 @@
         <script src='{{ STATIC }}/js/cartpage.js'></script>
     </head>
     <body>
-        <div id="single-page-content" class="cartpage">
-            <div class="header-logo">
-                <a href="/shop"><img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' /></a>
-            </div>
-            <ul id="cart">
-            </ul>
-            <div id="pay-module">
-                <div id="pay-login">
-                    <h3>Du måste logga in för att kunna betala</h3>
-                    <form class="uk-form-stacked">
-                        <input required id="email" class="uk-input" type="text" placeholder="Email" />
-                        <button id="login-button" type="submit" class="uk-button uk-button-default uk-button-primary">
-                            Logga in
-                        </button>
-                    </form>
-                </div>
-                <form id="pay">
-                    <h3>Betala med kort via Stripe</h3>
-                    <form action="/charge" method="post" id="payment-form">
-                        <div class="form-row">
-                            {# <label for="card-element">
-                              Credit or debit card
-                            </label> #}
-                            <div id="card-element">
-                              <!-- A Stripe Element will be inserted here. -->
-                            </div>
-
-                            <!-- Used to display form errors. -->
-                            <div id="card-errors" role="alert"></div>
+        <div id="root">
+            {{ sidebar("cart") }}
+            <div id="content" class="cartpage">
+                <div class="content-centering">
+                    <h3 class="cart-header">Varukorg</h3>
+                    <ul id="cart">
+                    </ul>
+                    <div id="pay-module">
+                        <div id="pay-login">
+                            <h3>Du måste logga in för att kunna betala</h3>
+                            <form class="uk-form-stacked">
+                                <input required id="email" class="uk-input" type="text" placeholder="Email" />
+                                <button id="login-button" type="submit" class="uk-button uk-button-default uk-button-primary">
+                                    Logga in
+                                </button>
+                            </form>
                         </div>
+                        <form id="pay">
+                            <h3>Betala med kort via Stripe</h3>
+                            <form action="/charge" method="post" id="payment-form">
+                                <div class="form-row">
+                                    {# <label for="card-element">
+                                      Credit or debit card
+                                    </label> #}
+                                    <div id="card-element">
+                                      <!-- A Stripe Element will be inserted here. -->
+                                    </div>
 
-                        <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary">
-                            <div class="progress-spinner" uk-spinner></div>
-                            <span>Betala<span id='cart-sum'></span></span>
-                        </button>
+                                    <!-- Used to display form errors. -->
+                                    <div id="card-errors" role="alert"></div>
+                                </div>
+
+                                <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary">
+                                    <div class="progress-spinner" uk-spinner></div>
+                                    <span>Betala<span id='cart-sum'></span></span>
+                                </button>
+                                </form>
+                            </form>
                         </form>
-                    </form>
-                </form>
-            </div>
-            <div class="text-navigation-footer">
-                <a href='/member'>Medlemsvy</a>
-                <a href='{{ url("/member/history") }}'>Köphistorik</a>
-                <a href='{{ url("/") }}'>Webshop</a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
