--- a/public/src/templates/member.html
+++ b/public/src/templates/member.html
@@ -1,3 +1,4 @@
+{% from "sidebar.html" import sidebar with context %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +13,10 @@
         <script src="{{ STATIC }}/js/member.js"></script>
     </head>
     <body>
-        <div id="single-page-content">
+        <div id="root">
+            {{ sidebar("member") }}
+            <div id="content">
+            </div>
         </div>
     </body>
 </html>
