Added more info to the new member email (more specifically about making sure to tidy up after visiting the makerspace)

--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -19,6 +19,8 @@
             <h2>Sociala medier</h2>
             <p>Bli gärna medlem i <a href="https://www.facebook.com/groups/makerspace.se">Stockholm Makerspace Facebookgrupp</a>. Där läggs mycket värdefull information upp och har du några frågor så är det den perfekta platsen att ställa dem.</p>
             <p>Det finns även en slack kanal och lite annat. Se <a href="https://www.makerspace.se/kontakta-oss">denna sida</a> för mer information</p>
+            <h2>Att vara i lokalen</h2>
+            <p>Tänk på att Stockholm Makerspace är en helt medlemsdriven förening, det är vi medlemmar som ser till så att allt är snyggt, att maskinerna fungerar och att lokalen är trivsam. Så när du är i lokalen så kom ihåg att städa efter dig så att det ser fint ut när du går. Det är inte ok att lämna en röra efter sig. Är det någon maskin du skulle vilja använda men inte har någon koll på hur man gör, fråga någon, vi strävar efter att ha en hjälpsam atmosfär. Facebookgruppen är också bra för sådana frågor.</p>
             <h2>Ditt konto</h2>
             <p>Vill du komma åt ditt konto på Stockholm Makerspace så kan du logga in <a href="{{ public_url('/member') }}">här</a>. Där kan du förutom att ändra dina kontaktuppgifter även se hur länge till din labaccess gäller samt komma åt webshoppen.</p>
         </td>
