#43 Renamed test helper dir to aid.

--- a/public/scss/_include-media.scss
+++ b/public/scss/_include-media.scss
@@ -19,7 +19,7 @@
 
 
 ////
-/// include-media library public configuration
+/// include-media test public configuration
 /// @author Eduardo Boucas
 /// @access public
 ////
