Update templates according to content branch

--- a/public/src/templates/receipt.html
+++ b/public/src/templates/receipt.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tack för ditt köp - Makerspace Webshop</title>
+        <title>Tack för ditt köp - Stockholm Makerspace Webshop</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
