--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -1,28 +1,130 @@
-<table width="600px" border="0" cellspacing="0" cellpadding="0" style="margin-left: auto; margin-right: auto;">
+<center>
+<table bgcolor="#F1F1F1" width="600px" border="0" cellspacing="0" cellpadding="0" style="margin-left: auto; margin-right: auto; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; text-align:left; margin:0; padding:0; width:100% !important; background-color:#F1F1F1; max-width:600px; min-width:320px; width="100% !important;">
     <tr>
         <td align="center">
-            <img style="margin-bottom: 15px;" width=200px src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png" />
+            <img style="margin:15px;" width=200px src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png" />
         </td>
     </tr>
     <tr>
         <td>
-            <h2>Välkommen som ny medlem på Stockholm Makerspace {{member.firstname}}!</h2>
-            <p>Vi hoppas kunna se dig på spacet snart!</p>
-            <h2>Din info</h2>
-            <p>Du är registrerad som {{member.firstname}} {{member.lastname}} med medlemsnummer <b>#{{member.member_number}}</b>.</p>
-            <h2>Labaccess</h2>
-            <p>Om du precis har köpt labaccess så måste du aktivera den genom att komma på en nyckelutlämning. När dessa sker står i <a href="https://www.makerspace.se/kalendarium">kalendariumet</a>.
-            Vid nyckelutlämningen så kommer du att få en egen nyckel till spacet så att du kan komma och gå som du vill.</p>
-            <h2>Kurser</h2>
-            <p>Vissa av maskinerna på spacet kräver att man har gått en introduktionskurs innan man får använda dem. Detta gäller bland annat laserskäraren och träsvarven.
-                Även dessa kurser finns i kalendariumet. Det finns även andra spännande kurser som inte är rena introduktionskurser, håll utkik i facebookgruppen för att se vad som kommer upp.</p>
-            <h2>Sociala medier</h2>
-            <p>Bli gärna medlem i <a href="https://www.facebook.com/groups/makerspace.se">Stockholm Makerspace Facebookgrupp</a>. Där läggs mycket värdefull information upp och har du några frågor så är det den perfekta platsen att ställa dem.</p>
-            <p>Det finns även en slack kanal och lite annat. Se <a href="https://www.makerspace.se/kontakta-oss">denna sida</a> för mer information</p>
-            <h2>Att vara i lokalen</h2>
-            <p>Tänk på att Stockholm Makerspace är en helt medlemsdriven förening, det är vi medlemmar som ser till så att allt är snyggt, att maskinerna fungerar och att lokalen är trivsam. Så när du är i lokalen så kom ihåg att städa efter dig så att det ser fint ut när du går. Det är inte ok att lämna en röra efter sig. Är det någon maskin du skulle vilja använda men inte har någon koll på hur man gör, fråga någon, vi strävar efter att ha en hjälpsam atmosfär. Facebookgruppen är också bra för sådana frågor.</p>
-            <h2>Ditt konto</h2>
-            <p>Vill du komma åt ditt konto på Stockholm Makerspace så kan du logga in <a href="{{ public_url('/member') }}">här</a>. Där kan du förutom att ändra dina kontaktuppgifter även se hur länge till din labaccess gäller samt komma åt webshoppen.</p>
+<h1>Hej {member.firstname},</h1>
+<p style="margin:0; padding:0;font-size: 10px;"><i>(Information in English below the dashed line)</i></p>
+
+<p>
+Välkommen till Stockholm Makerspace. Du är nu del av Sveriges största självständiga Makerspace. Stockholm Makerspace drivs helt på ideell basis vilket innebär att ingen i vår organisation är avlönad. Om du tycker att det finns något som kan utvecklas så är du varmt välkommen att engagera dig i driften av vår förening.
+</p>
+
+<p>
+Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om Stockholm Makerspace. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
+</p>
+
+<p>
+<b>Medlemsinformation</b><br/>
+Namn: <i>{member.firstname} {member.lastname}</i><br/>
+Email: <i>{member.email}</i><br/>
+Medlemsnummer: <i>{member.member_number}</i><br/>
+</p>
+
+<p>
+Om föreningen behöver nå dig så använder vi den här emailen. Det är därför viktigt att du tar ansvar för att den här e-mailadressen fungerar, eller anmäler ny email. Medlemsnummret används för vår interna organisation och du kommer att behöva det för att anmäla dig till våra kurser.
+</p>
+
+<p>
+Som ny medlem har du sannolikt mycket frågor om Stockholm Makerspace. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
+</p>
+
+<h2>INFORMATIONSKANALER</h2>
+<p>
+Föreningen använder sig av officiellt av två informationskanaler, Facebook och nyhetsbrev (utkommer sporadiskt). På Facebook har vi dels en publik sida och en grupp (<a href="https://facebook.com/groups/makerspace.se">facebook.com/groups/makerspace.se</a>) för föreningens medlemmar. Följ oss gärna och bidra med din unika kunskap i diskussionerna!
+Vi har även Slack (<a href="https://wiki.makerspace.se/Slack">wiki.makerspace.se/Slack</a>).
+</p>
+
+<h2>TVÅ TYPER AV MEDLEMSKAP</h2>
+<p>
+<b>Grundmedlem</b><br/>
+Som medlem i föreningen så är du välkommen på kurser och workhops som vi arrangerar, samt årsmötet. Vill du utföra självständigt arbete i lokalen så ska du bli labbmedlem.
+</p>
+
+<p>
+<b>Labbmedlem</b><br/>
+För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du kvittera ut en nyckel. Nyckelutlämningar äger rum ungefär varannan vecka, och datum hittar du i vårt kalendarium (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). För att kvittera ut en nyckel måste du skriva under ett avtal där du ålägger dig att följa våra lokalregler (<a href="https://wiki.makerspace.se/Lokalregler">wiki.makerspace.se/Lokalregler</a>), samt visa ID.
+</p>
+
+<h2>KURSER</h2>
+<p>
+En del av våra maskiner kräver att du har deltagit i en utbildning innan du får använda dessa. Detta gäller utan undantag! Kurstillfällen hittar du i vårt kalendarium och i vår medlemsgrupp på Facebook.
+</p>
+
+<p>
+Om du har ytterligare frågor eller funderingar så hittar du säkert svar på vår wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) eller i vår FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ">wiki.makerspace.se/Makerspace_FAQ</a>).
+</p>
+
+<p>
+Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+</p>
+
+<p>
+Bästa hälsningar<br/>
+Styrelsen i Stockholm Makerspace<br/>
+<a href="https://www.makerspace.se/">www.makerspace.se</a>
+</p>
+
+----------------------------------------------------------------------------
+
+<p>
+Welcome to Stockholm Makerspace. Stockholm Makerspace is an NGO run completely on a voluntary basis, meaning that no one in our organisation gets paid to work here. If you find anything that needs improving or development, then you are warmly welcome to join us in running our community.
+</p>
+
+<p>
+<b>Member info</b><br/>
+Name: {firstname} {lastname}<br/>
+Email: {email}<br/>
+Membership number: {member_number}<br/>
+</p>
+
+<p>
+We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. The membership number is used for our database and you’ll need it to sign up for courses.
+</p>
+
+<p>
+As a new member, you probably have a lot of questions about Stockholm Makerspace. In this email you find the info you need to retrieve most, if not all answers to your questions, so read the email carefully!
+</p>
+
+<h2>COMMUNICATION CHANNELS</h2>
+<p>
+Two channels of communication are in use for official affairs: Facebook and newsletters (latter is infrequently used). We have one public Facebook page (<a href="https://facebook.com/stockholm.makerspace/">facebook.com/stockholm.makerspace</a>) and one Facebook group for members (<a href="https://facebook.com/groups/makerspace.se">facebook.com/groups/makerspace.se</a>). Follow us and contribute your unique know-how to discussions! We’re also on Slack (<a href="https://wiki.makerspace.se/Slack">wiki.makerspace.se/Slack</a>).
+</p>
+
+<h2>TWO TYPES OF MEMBERSHIP</h2>
+<p>
+<b>Basal membership</b><br/>
+As member in the organisation you’re welcome to attend our events and workshops, as well as the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.
+</p>
+
+<p>
+<b>Lab member</b><br/>
+The premises is open 24/7 for lab members, all year 'round, but to start gaining access you need to check out a fob key. Key handouts occur approximately every two weeks, and they’re called Nyckelutlämningar in our calendar (makerspace.se/kalendarium). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show ID.
+</p>
+
+<h2>COURSES</h2>
+<p>
+Some of our equipment requires that you participate in a course prior to use. There are no exceptions! Courses are announced in our members’ group on Facebook as well as in the calendar.
+</p>
+
+<p>
+If you have further questions or queries, you’re likely to find your answer on our wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) or in the FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ">wiki.makerspace.se/Makerspace_FAQ</a>).
+</p>
+
+<p>
+If you have questions for the board email us at <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+</p>
+
+<p>
+Best regards,<br/>
+The Board of Stockholm Makerspace<br/>
+<a href="https://www.makerspace.se/">www.makerspace.se</a>
+</p>
         </td>
     </tr>
 </table>
+</center>
