--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Stockholm Makerspace Webshop</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
     <body>
         <script>
             localStorage.token = "{{ token }}";
