--- a/public/src/templates/product_edit.html
+++ b/public/src/templates/product_edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Makerspace Webshop</title>
+        <title>Stockholm Makerspace Webshop</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
