--- a/public/src/templates/cart.html
+++ b/public/src/templates/cart.html
@@ -19,7 +19,7 @@
             <div id="content" class="cartpage">
                 <div class="content-centering">
                     <h3 class="cart-header">Varukorg</h3>
-                    <ul id="cart">
+                    <ul id="cart" class="layout-table">
                     </ul>
                     <div id="pay-module">
                         <div id="pay-login">
