Add large buy button to webshop sidebar. Fixes #40.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -67,6 +67,21 @@ html, body {
 	.uk-nav-default {
 		margin-top: 20px;
 	}
+
+	.sidebar-buy-btn {
+		margin-top: 40px;
+		width: 100%;
+		opacity: 1;
+		transition: opacity 200ms;
+
+		a {
+			color: #FFF;
+		}
+	}
+
+	.sidebar-buy-btn.cart-empty {
+		opacity: 0.5;
+	}
 }
 
 .product.active {
@@ -981,7 +996,7 @@ form input.readonly-input {
 	justify-content: center;
 }
 
-.empty-cart {
+.empty-cart-text {
 	text-align: center;
 	width: 100%;
 	padding: 20px;
