Add search to webshop. Fixes #59.

--- a/public/src/templates/shop.html
+++ b/public/src/templates/shop.html
@@ -21,7 +21,7 @@
                     <li class="product-search-bar">
                         <form class="product-search uk-search uk-search-default">
                             <span uk-search-icon></span>
-                            <input class="uk-search-input" type="search" placeholder="Hitta produkt...">
+                            <input class="uk-search-input" id="product-search-field" type="search" placeholder="Hitta produkt...">
                         </form>
                         <div class="toggle-product-images uk-button-group">
                             <button id="layout-grid" class="layout-button uk-icon-button" uk-icon="icon: grid"></button>
