--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bli medlem - Stockholm Makerspace</title>
+        <title>Bli medlem, Become a member - Stockholm Makerspace</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
@@ -17,25 +17,25 @@
             <div class="header-logo">
                 <img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' />
             </div>
-            <h1>Bli medlem</h1>
+            <h1>Bli medlem / Become a member</h1>
             <div>
-                <label for="firstname" class="uk-form-label">Förnamn</label>
+                <label for="firstname" class="uk-form-label">Förnamn / First name</label>
                 <input required id="firstname" required class="uk-input" type="text" placeholder="" />
             </div>
             <div>
-                <label for="lastname" class="uk-form-label">Efternamn</label>
+                <label for="lastname" class="uk-form-label">Efternamn / Last name</label>
                 <input required id="lastname" required class="uk-input" type="text" placeholder="" />
             </div>
             <div>
-                <label for="email" class="uk-form-label">E-post</label>
+                <label for="email" class="uk-form-label">E-post / Email</label>
                 <input required id="email" required class="uk-input" type="text" placeholder="" />
             </div>
             <div>
-                <label for="phone" class="uk-form-label">Telefonnummer</label>
+                <label for="phone" class="uk-form-label">Telefonnummer / Phone number</label>
                 <input id="phone" class="uk-input" type="text" placeholder="" />
             </div>
             <div>
-                <label for="address_zipcode" class="uk-form-label">Postnummer</label>
+                <label for="address_zipcode" class="uk-form-label">Postnummer / Zipcode</label>
                 <input id="address_zipcode" required class="uk-input" type="text" placeholder="" />
             </div>
             <!-- <div>
@@ -47,11 +47,19 @@
                 <input id="address_extra" class="uk-input" type="text" placeholder="Extra adressrad, t ex C/O adress" />
             </div>
             <div class="uk-margin-bottom">
-                <label for="address_city" class="uk-form-label">Postort</label>
+                <label for="address_city" class="uk-form-label">Postort / City</label>
                 <input id="address_city" class="uk-input" type="text" placeholder="" />
             </div> -->
 
             <div id="products"></div>
+
+            <p>English</p>
+
+            <p>The starter pack gives you one year's membership in the association and 60 days of lab access at a discounted price. The lab access time starts after your key is retrieved during a "nyckelutlämning" (key distribution) (see the calendar for the next time).</p>
+
+            <p>You can also choose to buy just the annual membership in the association. Lab access can be purchased separately in the <a href="/shop">webshop</a>. This is slightly more expensive than the package price.</p>
+
+            <p>Svenska</p>
 
             <p>Startpaketet ger dig årsmedlemsskap i föreningen samt 60 dagars labaccess till ett paketpris. Labaccessen börjar räknas efter uthämtad nyckel på en nyckelutlämning (se kalendarium för nästa tillfälle).</p>
             <p>Du kan istället välja att köpa endast årsmedlemsskap i föreningen. Labaccess kan köpas separat i <a href="/shop">webshoppen</a>. Detta är något dyrare än paketpriset.</p>
@@ -67,7 +75,7 @@
 
             <button type="button" id="pay-button" class="uk-button uk-button-default uk-button-primary">
                 <div class="progress-spinner" uk-spinner></div>
-                <span>Betala</span>
+                <span>Betala / Pay</span>
             </button>
 
             </form>
