--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <td>
-<h1>Hej {member.firstname},</h1>
+<h1>Hej {{member.firstname}},</h1>
 <p style="margin:0; padding:0;font-size: 10px;"><i>(Information in English below the dashed line)</i></p>
 
 <p>
@@ -20,9 +20,9 @@ Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om Stockholm
 
 <p>
 <b>Medlemsinformation</b><br/>
-Namn: <i>{member.firstname} {member.lastname}</i><br/>
-Email: <i>{member.email}</i><br/>
-Medlemsnummer: <i>{member.member_number}</i><br/>
+Namn: <i>{{member.firstname}} {{member.lastname}}</i><br/>
+Email: <i>{{member.email}}</i><br/>
+Medlemsnummer: <i>{{member.member_number}}</i><br/>
 </p>
 
 <p>
@@ -77,9 +77,9 @@ Welcome to Stockholm Makerspace. Stockholm Makerspace is an NGO run completely o
 
 <p>
 <b>Member info</b><br/>
-Name: {firstname} {lastname}<br/>
-Email: {email}<br/>
-Membership number: {member_number}<br/>
+Name: {{member.firstname}} {{member.lastname}}<br/>
+Email: {{member.email}}<br/>
+Membership number: {{member.member_number}}<br/>
 </p>
 
 <p>
