"Lab membership" term update in English

--- a/backend/src/templates/updated_key_time_email.html
+++ b/backend/src/templates/updated_key_time_email.html
@@ -8,7 +8,7 @@
         <td>
             <h2>Your lab access time has been extended!</h2>
             <p>Hej {{member.firstname}}. Your lab access time has been extended by  {{extended_days}} days and is now active up to and including {{end_date}}.</p>
-            <p>Remember that you can always see you current lab access status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
+            <p>Remember that you can always see you current lab membership status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
             <p>New lab access and other material can be purchased in the <a href="{{ public_url('/shop') }}">webshop</a>.</p>
 
             <h2>Din labaccess har utökats!</h2>
