--- a/backend/src/templates/updated_membership_time_email.html
+++ b/backend/src/templates/updated_membership_time_email.html
@@ -8,7 +8,7 @@
         <td>
           <h2>Your membership dues for Stockholm Makerspace have been paid!</h2>
           <p>Hej {{member.firstname}}. Your membership time has been extended by {{extended_days}} days and is now valid up to an including {{end_date}}.</p>
-          <p>Remember that you can always see you current membership and lab access status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
+          <p>Remember that you can always see you current membership and lab membership status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
           <p>New lab access and other material can be purchased in the <a href="{{ public_url('/shop') }}">webshop</a>.</p>
 
           <h2>Ditt föreningsmedlemsskap i Stockholm Makerspace har utökats!</h2>
