Edits to English text

--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -70,7 +70,7 @@ Styrelsen i Stockholm Makerspace<br/>
 </p>
 
 ----------------------------------------------------------------------------
-
+<p>ENGLISH</p>
 <p>
 Welcome to Stockholm Makerspace. Stockholm Makerspace is an NGO run completely on a voluntary basis, meaning that no one in our organisation gets paid to work here. If you find anything that needs improving or development, then you are warmly welcome to join us in running our community.
 </p>
@@ -83,27 +83,27 @@ Membership number: {{member.member_number}}<br/>
 </p>
 
 <p>
-We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. The membership number is used for our database and you’ll need it to sign up for courses.
+We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. Your membership number is used for our database, and you’ll need it to sign up for courses and workshops.
 </p>
 
 <p>
-As a new member, you probably have a lot of questions about Stockholm Makerspace. In this email you find the info you need to retrieve most, if not all answers to your questions, so read the email carefully!
+As a new member, you probably have a lot of questions about Stockholm Makerspace. In this email you'll find the info you need to answer most, if not all, of your questions, so please read this email carefully!
 </p>
 
 <h2>COMMUNICATION CHANNELS</h2>
 <p>
-Two channels of communication are in use for official affairs: Facebook and newsletters (latter is infrequently used). We have one public Facebook page (<a href="https://facebook.com/stockholm.makerspace/">facebook.com/stockholm.makerspace</a>) and one Facebook group for members (<a href="https://facebook.com/groups/makerspace.se">facebook.com/groups/makerspace.se</a>). Follow us and contribute your unique know-how to discussions! We’re also on Slack (<a href="https://wiki.makerspace.se/Slack">wiki.makerspace.se/Slack</a>).
+Two channels of communication are in use for official affairs: Facebook and newsletters (the latter is infrequently used). We have one public Facebook page (<a href="https://facebook.com/stockholm.makerspace/">facebook.com/stockholm.makerspace</a>) and one Facebook group for members (<a href="https://facebook.com/groups/makerspace.se">facebook.com/groups/makerspace.se</a>). Follow us and contribute your unique know-how to discussions! We’re also on Slack (<a href="https://wiki.makerspace.se/Slack">wiki.makerspace.se/Slack</a>).
 </p>
 
 <h2>TWO TYPES OF MEMBERSHIP</h2>
 <p>
-<b>Basal membership</b><br/>
-As member in the organisation you’re welcome to attend our events and workshops, as well as the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.
+<b>Base membership</b><br/>
+As member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.
 </p>
 
 <p>
-<b>Lab member</b><br/>
-The premises is open 24/7 for lab members, all year 'round, but to start gaining access you need to check out a fob key. Key handouts occur approximately every two weeks, and they’re called Nyckelutlämningar in our calendar (makerspace.se/kalendarium). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show ID.
+<b>Lab membership</b><br/>
+The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.
 </p>
 
 <h2>COURSES</h2>
@@ -112,11 +112,11 @@ Some of our equipment requires that you participate in a course prior to use. Th
 </p>
 
 <p>
-If you have further questions or queries, you’re likely to find your answer on our wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) or in the FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ">wiki.makerspace.se/Makerspace_FAQ</a>).
+If you have further questions, you’re likely to find your answer on our wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) or in the FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">wiki.makerspace.se/Makerspace_FAQ,_English</a>).
 </p>
 
 <p>
-If you have questions for the board email us at <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+If you have questions for the board, email us at <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
 </p>
 
 <p>
