--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -53,15 +53,18 @@
 
             <div id="products"></div>
 
-            <p>English</p>
+            <h3>English</h3>
 
-            <p>The starter pack gives you one year's membership in the association and 60 days of lab access at a discounted price. The lab access time starts after your key is retrieved during a "nyckelutlämning" (key distribution) (see the calendar for the next time).</p>
+            <p>The starter pack gives you one year's membership in the association and 60 days of lab membership at a discounted price. The lab access time starts after your key is retrieved during a "nyckelutlämning" (key distribution) (see the calendar for the next time).</p>
+
+            <p><strong>You must be at least 16 years old to purchase lab membership!</strong></p>
 
             <p>You can also choose to buy just the annual membership in the association. Lab access can be purchased separately in the <a href="/shop">webshop</a>. This is slightly more expensive than the package price.</p>
 
-            <p>Svenska</p>
+            <h3>Svenska</h3>
 
             <p>Startpaketet ger dig årsmedlemsskap i föreningen samt 60 dagars labaccess till ett paketpris. Labaccessen börjar räknas efter uthämtad nyckel på en nyckelutlämning (se kalendarium för nästa tillfälle).</p>
+            <p><strong>Du måste vara minst 16 för att köp labbmedlemskap!</strong></p>
             <p>Du kan istället välja att köpa endast årsmedlemsskap i föreningen. Labaccess kan köpas separat i <a href="/shop">webshoppen</a>. Detta är något dyrare än paketpriset.</p>
 
             <div class="form-row">
